main: Fix opening files

Caused by the switch to D-Bus activation.

https://bugzilla.gnome.org/show_bug.cgi?id=735935